<resources>
    <!--string for main fragment-->
    <string name="app_name">OpenWeather</string>
    <string name="forecast_fragment">Weather forecast</string>
    <string name="search">Search</string>

    <string name="temp_min_format" formatted="false">
    <![CDATA[
        <font color =\'#B3C3F3\'>Min</font> %1$s°
    ]]>
    </string>
    <string name="temp_max_format" formatted="false">
    <![CDATA[
        <font color =\'#FFA6A6\'>Max</font> %1$s°
    ]]>
    </string>

    <string name="pressure_format">Pressure: %1$smm</string>
    <string name="location_message">You must enable location and refresh list</string>
    <string name="locate">Locate</string>

    <!--string for drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_list_today">Weather today</string>
    <string name="drawer_list_week">Weather for week</string>
    <string name="drawer_list_map">Map</string>
    <string name="drawer_list_settings">Settings</string>
    <string name="drawer_list_communicate">Communicate</string>
    <string name="drawer_list_share">Share</string>
    <string name="drawer_list_comment">Comment</string>
    <string name="drawer_list_about">About</string>

    <!--string for communication-->
    <string name="info_dialog_title">App information</string>
    <string name="info_dialog_text">OpenWeather for Android \n Version 0.01</string>
    <string name="test_body_text">Text for example</string>
    <string name="test_subject">Subject</string>

    <!--string for current weather fragment-->
    <string name="current_weather_fragment">Weather today</string>
    <string name="current_weather_temperature">%s°</string>
    <string name="current_weather_city">%1$s, %2$s</string>
    <string name="current_weather_wind">Wind: %sm/s</string>
    <string name="current_weather_humidity">Humidity: %s%%</string>
    <string name="current_weather_clouds">Clouds: %s%%</string>
    <string name="current_weather_sun">Sunrise/Sunset: %1$s/%2$s</string>
    <string name="current_error_text"><s>Failed loading data</s></string>
    <string name="current_error_text_network">Please, check network connection.</string>
    <string name="current_error_repeat">Repeat</string>
    <string name="current_subtitle">Update time: %1$s</string>

    <!--string for map fragment-->
    <string name="fragment_map_title">Weather map</string>
    <string-array name="spinner_values">
        <item>Clouds</item>
        <item>Precipitation</item>
        <item>Sea level pressure</item>
        <item>Wind speed</item>
        <item>Temperature</item>
    </string-array>

    <!--string for preference screen-->
    <string name="pref_title">Settings</string>
    <string name="pref_title_update">Update database</string>
    <string name="pref_summary_on_update">Database update is enabled</string>
    <string name="pref_summary_off_update">Database update is disabled</string>
    <string name="pref_title_alarm">Message forecast</string>
    <string name="pref_summary_on_message">Message report is enabled</string>
    <string name="pref_summary_off_message">Message report is disabled</string>
    <string name="pref_title_forecast_days">Forecast days</string>
    <string name="pref_summary_forecast_days">%s days</string>
    <string name="refresh">Refresh</string>
    <string name="defaultDay">7</string>
    <string name="defaultQuery">Kiev</string>
    <string name="preference_category_basic">Basic</string>

    <string-array name="forecast_days">
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>12</item>
        <item>16</item>
    </string-array>

    <!--string for notification-->
    <string name="notif_weather_forecast_title">Weather for today</string>
    <string name="notif_weather_content_title">%1$s°C - %2$s</string>
    <string name="notif_weather_content_text">%1$s°C - %2$s</string>

</resources>
