<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/current_weather_linear_layout_error"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="invisible"
    android:gravity="center">

    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/ic_current_error_image"
        android:id="@+id/current_weather_error_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_current_text_error"
        android:layout_marginTop="4dp"
        android:textSize="16dp"
        android:text="@string/current_error_text" />

    <TextView
        android:id="@+id/fragment_current_text_error_network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_error_text_network"
        android:textSize="16dp"/>

    <Button
        android:id="@+id/fragment_current_button_reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/current_error_repeat"
        android:layout_marginTop="36dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_below="@id/fragment_current_text_error_network"/>

</LinearLayout>